# Features

option(
    'modbus-rtu',
    type: 'feature',
    value: 'enabled',
    description: 'Enable modbus RTU.',
)

option(
    'mocked-test-device',
    type: 'feature',
    value: 'enabled',
    description: 'Build mocked modbus device.',
)

option('tests', type: 'feature', description: 'Build tests.')

# Variables

option(
    'modbus-rtu-timeout-microseconds',
    type: 'integer',
    value: 1000000,
    description: 'This defines the timeout for the modbus RTU client. The default value is 1 second (1000000 microseconds).',
)

option(
    'sensor-poll-interval-seconds',
    type: 'integer',
    value: 3,
    description: 'Sensor poll interval in seconds.',
)

option(
    'inventory-probe-interval-seconds',
    type: 'integer',
    value: 256,
    description: 'Inventory device discovery probe interval in seconds. This should balance bus traffic against timely detection of device insertion and removal (OIR).',
)

option(
    'inventory-dormant-probe-interval-seconds',
    type: 'integer',
    value: 512,
    description: 'Dormant probe interval in seconds for undiscovered addresses. Rounded up to the nearest multiple of the inventory probe interval.',
)

option(
    'max-register-span-length',
    type: 'integer',
    value: 120,
    description: 'Maximum number of registers in a single Modbus read span. Contiguous registers are merged into one read up to this limit.',
)

option(
    'device-cleanup-interval-seconds',
    type: 'integer',
    value: 3,
    description: 'Interval in seconds for the periodic cleanup loop that removes finished devices.',
)

